fix invisible image slide show

--- a/DevelopeContentList/Content/Android/Xmobile/css/slide.css
+++ b/DevelopeContentList/Content/Android/Xmobile/css/slide.css
@@ -81,6 +81,7 @@
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
+    animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes fade {
@@ -91,4 +92,9 @@
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.fade img{
+    width: 100%;
+    
 }
